@@ -46,6 +46,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Optional {{DISPLAYTITLE|title with markup}} magic word
   Deactivated by default, set "$wgAllowDisplayTitle = true" in LocalSettings.php to activate
 * Cleaned SpecialContributions a bit
+* Added a table to track interlanguage links
 
 == Compatibility ==
 
